--- a/Tasks/NuGetToolInstallerV0/package.json
+++ b/Tasks/NuGetToolInstallerV0/package.json
@@ -23,6 +23,7 @@
     },
     "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
     "dependencies": {
-        "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz"
+        "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz",
+        "semver": "^5.5.0"
     }
 }
