--- a/Tasks/AzureFunctionAppV1/package.json
+++ b/Tasks/AzureFunctionAppV1/package.json
@@ -17,14 +17,9 @@
   },
   "homepage": "https://github.com/Microsoft/vsts-tasks#readme",
   "dependencies": {
-    "@types/mocha": "2.2.48",
-    "@types/node": "6.0.68",
-    "@types/q": "1.0.7",
-    "azure-storage": "2.2.1",
+    "azure-storage": "^2.10.3",
     "azurermdeploycommon": "file:../../_build/Tasks/Common/azurermdeploycommon-1.1.0.tgz",
-    "moment": "2.21.0",
     "q": "1.4.1",
-    "uuid": "3.1.0",
-    "xml2js": "0.4.13"
+    "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz"
   }
 }
