--- a/ci/sign-all-tasks.yml
+++ b/ci/sign-all-tasks.yml
@@ -31,3 +31,4 @@ steps:
       }
       ]
   displayName: Sign Task Nuget Packages
+  condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), ne(variables['numTasks'], 0)) 
