--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -41,9 +41,9 @@ Tasks/AzureFunctionOnKubernetesV0/*     @ammohant    @ajinkya599
 
 Tasks/AzureFunctionV1/*     @ammohant
 
-Tasks/AzureIoTEdgeV2/*      @prativen  @blackchoey  @michaeljqzq
+Tasks/AzureIoTEdgeV2/*      @ammohant  @blackchoey  @michaeljqzq
 
-Tasks/AzureKeyVaultV1/*     @prativen
+Tasks/AzureKeyVaultV1/*     @ammohant
 
 Tasks/AzureMonitorAlertsV0/*    @Vijay-train    @chshrikh
 
@@ -203,7 +203,7 @@ Tasks/FuncToolsInstallerV0/*     @ammohant   @ajinkya599
 
 Tasks/GithubCommentV0/*     @ds-ms
 
-Tasks/GithubReleaseV0/*     @prativen   @mdmdakbar
+Tasks/GithubReleaseV0/*     @ammohant   @mdmdakbar
 
 Tasks/GoV0/*    @bishal-pdmsft
 
