--- a/ci/sign-all-tasks.yml
+++ b/ci/sign-all-tasks.yml
@@ -6,7 +6,7 @@ steps:
 - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
   inputs:
     ConnectedServiceName: AzurePipelinesTasksESRP
-    FolderPath: '${{ parameters.layoutRoot }}\_package\nested-zips-layout'
+    FolderPath: '${{ parameters.layoutRoot }}'
     Pattern: '*.zip'
     signConfigType: inlineSignParams
     inlineOperation: |
