--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -51,15 +51,20 @@ steps:
 # Only on Windows:
 - ${{ if eq(parameters.os, 'Windows_NT') }}:
 
-  # Stage packages
-  - script: node ./ci/stage-package.js
+  # Stage tasks individually into the package directory
+  - script: node ./ci/stage-package.js individually
     displayName: Stage package
-    condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), ne(variables['numTasks'], 0))
+    #condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), ne(variables['numTasks'], 0))
 
   # Sign all task zips as nuget packages
   - template: sign-all-tasks.yml
     parameters:
-      layoutRoot: $(Build.SourcesDirectory)\_package\nested-zips-layout
+      layoutRoot: $(Build.SourcesDirectory)\_package\tasks-layout
+
+  # Stage all the tasks into a single zip for upload
+  - script: node ./ci/stage-package.js
+    displayName: Stage package
+    #condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), ne(variables['numTasks'], 0))
 
   # Publish artifact
   - task: PublishBuildArtifacts@1
