--- a/ci/sign-all-tasks.yml
+++ b/ci/sign-all-tasks.yml
@@ -26,5 +26,5 @@ steps:
       }
       ]
   displayName: Sign Task Nuget Packages
-  condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), ne(variables['numTasks'], 0), eq(variables.os, 'Windows_NT'))
+  #condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), ne(variables['numTasks'], 0), eq(variables.os, 'Windows_NT'))
 
