--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -54,7 +54,7 @@ steps:
   # Stage tasks individually into the package directory
   - script: node ./ci/stage-package.js individually
     displayName: Stage package
-    #condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), ne(variables['numTasks'], 0))
+    condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), ne(variables['numTasks'], 0))
 
   # Sign all task zips as nuget packages
   - template: sign-all-tasks.yml
@@ -64,7 +64,7 @@ steps:
   # Stage all the tasks into a single zip for upload
   - script: node ./ci/stage-package.js
     displayName: Stage package
-    #condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), ne(variables['numTasks'], 0))
+    condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), ne(variables['numTasks'], 0))
 
   # Publish artifact
   - task: PublishBuildArtifacts@1
