Added checks to skip rollout status for eligible workloads if updateStrategy is not RollingUpdate.

--- a/Tasks/KubernetesManifestV0/Tests/manifests/deployment.yaml
+++ b/Tasks/KubernetesManifestV0/Tests/manifests/deployment.yaml
@@ -6,6 +6,8 @@ metadata:
     app: nginx
 spec:
   replicas: 3
+  updateStrategy:
+    type: OnDelete
   selector:
     matchLabels:
       app: nginx
