--- a/issue-rules.yml
+++ b/issue-rules.yml
@@ -38,6 +38,9 @@ rules:
   contains: 'MSBuild'
   addLabels: ['Area: Build']
 - valueFor: '**Enter Task Name**'
+  contains: 'DownloadSecureFile'
+  addLabels: ['Area: Build']
+- valueFor: '**Enter Task Name**'
   contains: 'CMake'
   addLabels: ['Area: ABTT']
 # Area: Core
@@ -331,6 +334,8 @@ nomatches:
   addLabels: ['Area: Artifacts']
 - contains: 'Docker' 
   addLabels: ['Area: Release']  
+- contains: 'Azure'
+  addLabels: ['Area: Release']
 
 # always runs after rules.  look for missing or invalid sets of tags
 tags:
