--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -20,3 +20,4 @@ jobs:
         days-before-stale: 365
         days-before-close: 5
         operations-per-run: 75
+        exempt-issue-labels: backlog
