Remove stale label with issue is updated

--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -20,4 +20,5 @@ jobs:
         days-before-stale: 365
         days-before-close: 5
         operations-per-run: 75
-        exempt-issue-labels: backlog
+        exempt-issue-labels: 'backlog'
+        remove-stale-when-updated: true
