--- a/ci/build-single-steps.yml
+++ b/ci/build-single-steps.yml
@@ -32,14 +32,19 @@ steps:
   displayName: Build
 
 # Stage hotfix
-- script: node ./ci/stage-hotfix.js
+- script: node ./ci/stage-hotfix.js individually
   condition: and(succeeded(), eq(variables.os, 'Windows_NT'))
-  displayName: Stage hotfix
+  displayName: Stage tasks individually into the package directory
 
 # Sign task zip as nuget packages
 - template: sign-all-tasks.yml
   parameters:
     layoutRoot: $(Build.SourcesDirectory)\_package\hotfix-layout
+
+# Stage hotfix
+- script: node ./ci/stage-hotfix.js
+  condition: and(succeeded(), eq(variables.os, 'Windows_NT'))
+  displayName: Stage all the tasks into a single zip for upload
 
 # Publish hotfix artifact
 - task: PublishBuildArtifacts@1
