--- a/Tasks/Common/utility-common/package.json
+++ b/Tasks/Common/utility-common/package.json
@@ -13,6 +13,9 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
+    "@types/mocha": "2.2.5",
+    "@types/node": "^6.0.0",
+    "@types/q": "0.0.0",
     "semver": "^5.4.1",
     "vso-node-api": "6.5.0",
     "vsts-task-lib": "2.6.0",
