--- a/Tasks/NuGetInstallerV0/package.json
+++ b/Tasks/NuGetInstallerV0/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
+    "@types/mocha": "2.2.5",
+    "@types/q": "0.0.0",
     "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz",
     "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz",
     "vsts-task-lib": "2.6.0",
