--- a/Tasks/SshV0/package.json
+++ b/Tasks/SshV0/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/node": "^6.0.101",
     "@types/q": "^1.0.7",
+    "@types/ssh2": "0.5.43",
     "scp2": "0.5.0",
     "ssh2": "0.8.2",
     "azure-pipelines-task-lib": "^2.9.3"
