Updating owners for App Center Distribute Task
Adding owners from build, diagnostics, and distribution

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,11 +9,11 @@ Tasks/AndroidSigningV3/    @leantk @microsoft/akvelon-build-task-team
 
 Tasks/ANTV1/   @leantk
 
-Tasks/AppCenterDistributeV1/   @DennisPan    @turanuk    @ranterle
+Tasks/AppCenterDistributeV1/   @dougnutz    @ranterle    @phillipleblanc
 
-Tasks/AppCenterDistributeV2/   @DennisPan    @turanuk    @ranterle
+Tasks/AppCenterDistributeV2/   @dougnutz    @ranterle    @phillipleblanc
 
-Tasks/AppCenterDistributeV3/   @DennisPan    @turanuk    @ranterle
+Tasks/AppCenterDistributeV3/   @dougnutz    @ranterle    @phillipleblanc
 
 Tasks/AppCenterTestV1/   @owenniblock
 
