--- a/.github/workflows/autoAssignABTT.yml
+++ b/.github/workflows/autoAssignABTT.yml
@@ -4,7 +4,7 @@ on:
   issues:
     types: [opened, labeled]
 env:
-  MY_GITHUB_TOKEN: ${{ secrets.ABTT_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   assign_one_project:
