Removing ammohant from AzureIotEdge owners list

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -45,7 +45,7 @@ Tasks/AzureFunctionOnKubernetesV0/     @ammohant    @ajinkya599
 
 Tasks/AzureFunctionV1/     @ammohant
 
-Tasks/AzureIoTEdgeV2/      @ammohant  @blackchoey  @michaeljqzq
+Tasks/AzureIoTEdgeV2/      @blackchoey  @michaeljqzq
 
 Tasks/AzureKeyVaultV1/     @ammohant
 
