--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -43,7 +43,7 @@ Tasks/AzureFunctionAppContainerV1/    @Vijay-train    @chshrikh      @SumiranAgg
 
 Tasks/AzureFunctionOnKubernetesV0/     @ammohant    @ajinkya599
 
-Tasks/AzureFunctionV1/     @ammohant
+Tasks/AzureFunctionV1/     @Vijay-train    @chshrikh
 
 Tasks/AzureIoTEdgeV2/      @blackchoey  @michaeljqzq
 
