--- a/Tasks/AndroidSigningV3/package.json
+++ b/Tasks/AndroidSigningV3/package.json
@@ -19,6 +19,6 @@
   "dependencies": {
     "@types/node": "^6.0.0",
     "azure-pipelines-task-lib": "^2.8.0",
-    "securefiles-common": "file:../../_build/Tasks/Common/securefiles-common-1.0.0.tgz"
+    "azure-pipelines-tasks-securefiles-common": "1.0.0"
   }
 }
