--- a/Tasks/InstallAppleProvisioningProfileV1/package.json
+++ b/Tasks/InstallAppleProvisioningProfileV1/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@types/node": "^6.0.0",
     "azure-pipelines-task-lib": "^2.8.0",
-    "ios-signing-common": "file:../../_build/Tasks/Common/ios-signing-common-1.0.0.tgz",
-    "securefiles-common": "file:../../_build/Tasks/Common/securefiles-common-1.0.0.tgz"
+    "azure-pipelines-tasks-securefiles-common": "1.0.0",
+    "ios-signing-common": "file:../../_build/Tasks/Common/ios-signing-common-1.0.0.tgz"
   }
 }
