--- a/Tasks/InstallSSHKeyV0/package.json
+++ b/Tasks/InstallSSHKeyV0/package.json
@@ -20,6 +20,6 @@
     "@types/node": "^6.0.0",
     "@types/q": "^1.5.1",
     "azure-pipelines-task-lib": "^2.8.0",
-    "securefiles-common": "file:../../_build/Tasks/Common/securefiles-common-1.0.0.tgz"
+    "azure-pipelines-tasks-securefiles-common": "1.0.0"
   }
 }
