Move java-common to shared npm package

--- a/Tasks/ANTV1/package.json
+++ b/Tasks/ANTV1/package.json
@@ -10,8 +10,8 @@
     "@types/node": "^6.0.101",
     "@types/q": "^1.0.7",
     "azure-pipelines-task-lib": "^2.8.0",
+    "azure-pipelines-tasks-java-common": "1.0.0",
     "codecoverage-tools": "file:../../_build/Tasks/Common/codecoverage-tools-1.0.0.tgz",
-    "java-common": "file:../../_build/Tasks/Common/java-common-1.0.0.tgz",
     "xml2js": "^0.4.16"
   }
 }
