--- a/Tasks/GradleV2/package.json
+++ b/Tasks/GradleV2/package.json
@@ -11,8 +11,8 @@
     "@types/node": "^6.0.101",
     "@types/q": "^1.0.7",
     "azure-pipelines-task-lib": "^2.8.0",
+    "azure-pipelines-tasks-java-common": "1.0.0",
     "codeanalysis-common": "file:../../_build/Tasks/Common/codeanalysis-common-1.0.0.tgz",
-    "codecoverage-tools": "file:../../_build/Tasks/Common/codecoverage-tools-1.0.0.tgz",
-    "java-common": "file:../../_build/Tasks/Common/java-common-1.0.0.tgz"
+    "codecoverage-tools": "file:../../_build/Tasks/Common/codecoverage-tools-1.0.0.tgz"
   }
 }
