--- a/Tasks/XamarinAndroidV1/package.json
+++ b/Tasks/XamarinAndroidV1/package.json
@@ -20,6 +20,6 @@
     "@types/node": "^6.0.101",
     "@types/q": "^1.5.1",
     "azure-pipelines-task-lib": "^2.8.0",
-    "java-common": "file:../../_build/Tasks/Common/java-common-1.0.0.tgz"
+    "azure-pipelines-tasks-java-common": "1.0.0"
   }
 }
