Move docker-common-v2 to a shared npm package

--- a/Tasks/KubernetesManifestV0/package.json
+++ b/Tasks/KubernetesManifestV0/package.json
@@ -6,9 +6,9 @@
     "@types/node": "^6.0.101",
     "@types/q": "^1.5.0",
     "azure-pipelines-task-lib": "2.8.0",
+    "azure-pipelines-tasks-docker-common-v2": "1.0.0",
     "azure-pipelines-tool-lib": "0.12.0",
     "del": "2.2.0",
-    "docker-common-v2": "file:../../_build/Tasks/Common/docker-common-v2-1.0.0.tgz",
     "js-yaml": "3.6.1",
     "kubernetes-common-v2": "file:../../_build/Tasks/Common/kubernetes-common-v2-1.0.0.tgz",
     "moment": "2.21.0",
