--- a/Tasks/ContainerBuildV0/package.json
+++ b/Tasks/ContainerBuildV0/package.json
@@ -2,8 +2,8 @@
   "dependencies": {
     "azure-arm-rest-v2": "file:../../_build/Tasks/Common/azure-arm-rest-v2-2.0.0.tgz",
     "azure-pipelines-task-lib": "2.8.0",
+    "azure-pipelines-tasks-docker-common-v2": "1.0.0",
     "azure-pipelines-tool-lib": "0.11.0",
-    "consistent-hashing": "0.3.0",
-    "docker-common-v2": "file:../../_build/Tasks/Common/docker-common-v2-1.0.0.tgz"
+    "consistent-hashing": "0.3.0"
   }
 }
