--- a/Tasks/DockerComposeV0/package.json
+++ b/Tasks/DockerComposeV0/package.json
@@ -4,7 +4,7 @@
     "@types/node": "^4.0.0",
     "@types/q": "^1.5.0",
     "del": "2.2.0",
-    "docker-common-v2": "file:../../_build/Tasks/Common/docker-common-v2-1.0.0.tgz",
+    "azure-pipelines-tasks-docker-common-v2": "1.0.0",
     "esprima": "2.7.1",
     "js-yaml": "3.6.1"
   }
