--- a/Tasks/NuGetAuthenticateV0/package.json
+++ b/Tasks/NuGetAuthenticateV0/package.json
@@ -23,6 +23,6 @@
     },
     "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
     "dependencies": {
-        "artifacts-common": "file:../../_build/Tasks/Common/artifacts-common-0.1.0.tgz"
+        "azure-pipelines-tasks-artifacts-common": "1.0.1"
     }
 }
