--- a/Tasks/AzureRmWebAppDeploymentV3/package.json
+++ b/Tasks/AzureRmWebAppDeploymentV3/package.json
@@ -20,7 +20,7 @@
     "@types/mocha": "2.2.48",
     "@types/node": "6.0.68",
     "@types/q": "1.0.7",
-    "azure-arm-rest": "file:../../_build/Tasks/Common/azure-arm-rest-1.0.2.tgz",
+    "azure-pipelines-tasks-azure-arm-rest": "1.0.0",
     "moment": "2.21.0",
     "q": "1.4.1",
     "uuid": "3.1.0",
