--- a/Tasks/AzureMysqlDeploymentV1/package.json
+++ b/Tasks/AzureMysqlDeploymentV1/package.json
@@ -20,8 +20,8 @@
     "@types/mocha": "2.2.48",
     "@types/node": "6.0.68",
     "@types/q": "1.0.7",
-    "azure-arm-rest-v2": "file:../../_build/Tasks/Common/azure-arm-rest-v2-2.0.0.tgz",
     "azure-pipelines-task-lib": "2.8.0",
+    "azure-pipelines-tasks-azure-arm-rest-v2": "1.0.0",
     "compress-commons": "1.1.0",
     "crc32-stream": "1.0.0",
     "moment": "2.21.0",
