--- a/Tasks/HelmDeployV0/package.json
+++ b/Tasks/HelmDeployV0/package.json
@@ -2,8 +2,8 @@
   "dependencies": {
     "@types/node": "^6.0.101",
     "@types/q": "^1.5.0",
-    "azure-arm-rest-v2": "file:../../_build/Tasks/Common/azure-arm-rest-v2-2.0.0.tgz",
     "azure-pipelines-task-lib": "2.8.0",
+    "azure-pipelines-tasks-azure-arm-rest-v2": "1.0.0",
     "azure-pipelines-tasks-securefiles-common": "1.0.0",
     "del": "2.2.0",
     "kubernetes-common-v2": "file:../../_build/Tasks/Common/kubernetes-common-v2-1.0.0.tgz",
