--- a/Tasks/KubernetesV1/package.json
+++ b/Tasks/KubernetesV1/package.json
@@ -6,9 +6,9 @@
     "@types/node": "^6.0.101",
     "@types/q": "^1.5.0",
     "azure-pipelines-task-lib": "2.8.0",
+    "azure-pipelines-tasks-docker-common-v2": "1.0.0",
     "azure-pipelines-tasks-azure-arm-rest-v2": "1.0.0",
     "del": "2.2.0",
-    "docker-common-v2": "file:../../_build/Tasks/Common/docker-common-v2-1.0.0.tgz",
     "kubernetes-common-v2": "file:../../_build/Tasks/Common/kubernetes-common-v2-1.0.0.tgz",
     "moment": "2.21.0",
     "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz",
