--- a/Tasks/AzureFileCopyV2/package.json
+++ b/Tasks/AzureFileCopyV2/package.json
@@ -4,7 +4,7 @@
     "@types/mocha": "2.2.48",
     "@types/node": "6.0.68",
     "@types/q": "1.0.7",
-    "azure-arm-rest-v2": "file:../../_build/Tasks/Common/azure-arm-rest-v2-2.0.0.tgz",
+    "azure-pipelines-tasks-azure-arm-rest-v2": "1.0.2",
     "azure-pipelines-task-lib": "2.8.0",
     "moment": "2.21.0",
     "uuid": "3.2.1"
