--- a/Tasks/AzureFunctionOnKubernetesV0/package.json
+++ b/Tasks/AzureFunctionOnKubernetesV0/package.json
@@ -15,8 +15,8 @@
     "@types/node": "12.12.7",
     "@types/q": "^1.5.0",
     "azure-pipelines-tasks-docker-common-v2": "1.0.0",
+    "azure-pipelines-tasks-kubernetes-common-v2": "1.0.1",
     "js-yaml": "3.13.1",
-    "kubernetes-common-v2": "file:../../_build/Tasks/Common/kubernetes-common-v2-1.0.0.tgz",
     "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz"
   }
 }
