--- a/Tasks/HelmDeployV0/package.json
+++ b/Tasks/HelmDeployV0/package.json
@@ -4,9 +4,9 @@
     "@types/q": "^1.5.0",
     "azure-pipelines-task-lib": "2.8.0",
     "azure-pipelines-tasks-azure-arm-rest-v2": "1.0.0",
+    "azure-pipelines-tasks-kubernetes-common-v2": "1.0.1",
     "azure-pipelines-tasks-securefiles-common": "1.0.0",
     "del": "2.2.0",
-    "kubernetes-common-v2": "file:../../_build/Tasks/Common/kubernetes-common-v2-1.0.0.tgz",
     "moment": "2.21.0",
     "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz",
     "vsts-task-tool-lib": "0.4.0"
