--- a/Tasks/XcodeV5/package.json
+++ b/Tasks/XcodeV5/package.json
@@ -19,6 +19,6 @@
   "dependencies": {
     "@types/node": "^6.0.101",
     "azure-pipelines-task-lib": "^2.8.0",
-    "ios-signing-common": "file:../../_build/Tasks/Common/ios-signing-common-1.0.0.tgz"
+    "azure-pipelines-tasks-ios-signing-common": "1.0.0"
   }
 }
