--- a/Tasks/MavenV3/package.json
+++ b/Tasks/MavenV3/package.json
@@ -11,10 +11,10 @@
     "@types/node": "^6.0.101",
     "@types/q": "^1.0.7",
     "azure-pipelines-task-lib": "^2.8.0",
+    "azure-pipelines-tasks-codeanalysis-common": "1.0.0",
     "azure-pipelines-tasks-codecoverage-tools": "1.0.0",
     "azure-pipelines-tasks-java-common": "1.0.0",
     "base-64": "^0.1.0",
-    "codeanalysis-common": "file:../../_build/Tasks/Common/codeanalysis-common-1.0.0.tgz",
     "fs-extra": "^0.30.0",
     "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz",
     "request": "^2.74.0",
