--- a/Tasks/JavaToolInstallerV0/package.json
+++ b/Tasks/JavaToolInstallerV0/package.json
@@ -25,7 +25,7 @@
     "dependencies": {
         "@types/node": "^6.0.101",
         "@types/q": "^1.0.7",
-        "azure-blobstorage-artifactProvider-v2": "file:../../_build/Tasks/Common/azure-blobstorage-artifactProvider-v2-2.0.0.tgz",
+        "azp-tasks-az-blobstorage-provider-v2": "1.0.0",
         "azure-pipelines-task-lib": "2.9.3",
         "azure-pipelines-tasks-azure-arm-rest": "1.0.0",
         "azure-pipelines-tool-lib": "0.12.0",
