--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ gulp-tsc-tmp-*
 
 shared-npm-packages/**/*.js
 !shared-npm-packages/**/make.js
+!shared-npm-packages/build-scripts/**.js
 [Tt]asks/**/*.js
 [Tt]ests/**/*.js
 !**/mock_node_modules/**/*.js
