--- a/common-npm-packages/java-common/package.json
+++ b/common-npm-packages/java-common/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
+    "@types/semver": "^7.3.3",
     "azure-pipelines-task-lib": "^2.8.0",
     "semver": "^5.1.0"
   },
