--- a/Tasks/KubernetesV0/package.json
+++ b/Tasks/KubernetesV0/package.json
@@ -7,6 +7,7 @@
     "@types/q": "^1.5.0",
     "azure-pipelines-tasks-docker-common": "1.0.0",
     "del": "2.2.0",
+    "js-yaml": "3.6.1",
     "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz",
     "vsts-task-tool-lib": "0.4.0"
   }
