--- a/Tasks/CmdLineV2/package.json
+++ b/Tasks/CmdLineV2/package.json
@@ -18,6 +18,11 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "uuid": "^3.0.1",
-    "azure-pipelines-task-lib": "^2.9.3"
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^6.0.0",
+    "azure-pipelines-task-lib": "^2.10.1"
+  },
+  "devDependencies": {
+    "typescript": "4.0.2"
   }
 }
