--- a/Tasks/SshV0/package.json
+++ b/Tasks/SshV0/package.json
@@ -4,7 +4,7 @@
     "@types/q": "^1.0.7",
     "@types/ssh2": "0.5.43",
     "azure-pipelines-task-lib": "^2.9.3",
-    "scp2": "0.5.0",
+    "ssh2-sftp-client": "^5.1.2",
     "ssh2": "0.8.2",
     "uuid": "^3.2.1"
   }
