Added types for ssh2-sftp-client. Increased minimum agent version. Removed redundant semicolon

--- a/Tasks/SshV0/package.json
+++ b/Tasks/SshV0/package.json
@@ -3,9 +3,10 @@
     "@types/node": "^6.0.101",
     "@types/q": "^1.0.7",
     "@types/ssh2": "0.5.43",
+    "@types/ssh2-sftp-client": "^5.2.0",
     "azure-pipelines-task-lib": "^2.9.3",
-    "ssh2-sftp-client": "^5.1.2",
     "ssh2": "0.8.2",
+    "ssh2-sftp-client": "^5.1.2",
     "uuid": "^3.2.1"
   }
 }
