generate hotfix package

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,10 @@ resources:
     endpoint: AzureDevOps
     name: AzureDevOps/AzureDevOps
 
+variables:
+  - name: task
+    value: KubernetesManifestV0
+
 jobs:
 
 # All tasks on Windows
