Updated for on more task

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -263,7 +263,7 @@ Tasks/InvokeRestApiV1/     @ammohant
 
 Tasks/JavaToolInstallerV0/     @leantk @microsoft/akvelon-build-task-team
 
-Tasks/JenkinsDownloadArtifactsV1/      @Lovakumar      @kasubram
+Tasks/JenkinsDownloadArtifactsV1/      @narula0781      @chandrasekharmudili
 
 Tasks/JenkinsQueueJobV2/   @leantk
 
