--- a/Tasks/ArchiveFilesV2/package.json
+++ b/Tasks/ArchiveFilesV2/package.json
@@ -14,6 +14,10 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "azure-pipelines-task-lib": "^2.9.3"
+    "azure-pipelines-task-lib": "^3.0.1-preview",
+    "@types/node": "^14.10.0"
+  },
+  "devDependencies": {
+    "typescript": "4.0.2"
   }
 }
