--- a/Tasks/DeleteFilesV1/package.json
+++ b/Tasks/DeleteFilesV1/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "azure-pipelines-task-lib": "^2.9.3"
+    "@types/node": "^14.10.0",
+    "@types/mocha": "^5.2.7",
+    "azure-pipelines-task-lib": "^2.11.1"
+  },
+  "devDependencies": {
+    "typescript": "4.0.2"
   }
 }
