--- a/Tasks/BashV3/package.json
+++ b/Tasks/BashV3/package.json
@@ -21,7 +21,7 @@
     "@types/mocha": "^5.2.7",
     "@types/uuid": "^8.3.0",
     "uuid": "^8.3.0",
-    "azure-pipelines-task-lib": "^2.11.1"
+    "azure-pipelines-task-lib": "3.0.1-preview"
   },
   "devDependencies": {
     "typescript": "4.0.2"
