--- a/ci/build-single-steps.yml
+++ b/ci/build-single-steps.yml
@@ -9,11 +9,11 @@ steps:
   displayName: Start collect diagnostics
   condition: and(succeeded(), eq(variables.os, 'Windows_NT'), eq(variables.collect_diagnostics, 'true'))
 
-# Use node 8, npm 5
+# Use node 14
 - task: NodeTool@0
-  displayName: Use node 8
+  displayName: Use node 14
   inputs:
-    versionSpec: "8.x"
+    versionSpec: "14.x"
 
 # npm install
 - script: npm install
